--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,28 +18,28 @@ variables:
 
 steps:
 - task: UseDotNet@2
-  displayName: 'Use .NET Cor SDK $(dotnetSdkVersion)'
+  displayName: 'Use .NET Core SDK $(dotnetSdkVersion)'
   inputs:
     version: '$(dotnetSdkVersion)'
 
 - task: Npm@1
   displayName: 'Run npm install'
-  inputs: 
+  inputs:
     verbose: false
 
-- script: './node_modules/.bin/nod-sass $(wwwrootDir) --output $(wwwrootDir)'
+- script: './node_modules/.bin/node-sass $(wwwrootDir) --output $(wwwrootDir)'
   displayName: 'Compile Sass assets'
 
 - task: gulp@1
   displayName: 'Run gulp tasks'
 
-- script: 'echo "&(Build.DefinitionName), $(Build.BuildID), $(Build.BuildNumber)" > buildinfo.txt'
+- script: 'echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt'
   displayName: 'Write build info'
   workingDirectory: $(wwwrootDir)
 
 - task: DotNetCoreCLI@2
   displayName: 'Restore project dependencies'
-  inputs: 
+  inputs:
     command: 'restore'
     projects: '**/*.csproj'
 
